Adjusted mobile layout and fixed column gap

--- a/src/css/sass/style.scss
+++ b/src/css/sass/style.scss
@@ -24,18 +24,18 @@ body {
   display: flex;
   position: fixed;
   width: 900px;
-  height: 460px;
+  min-height: 460px;
   max-width: 95%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 15px;
   padding: 2rem;
-  gap: 0 2rem;
 }
 
 .data-side {
-  width: 50%;
+  min-width: 50%;
+  margin-right: 1.5rem;
 }
 
 .display-side {
@@ -43,7 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 50%;
+  min-width: 50%;
   border-radius: 10px;
   padding: 3rem 2.5rem 2.5rem;
 }
@@ -94,7 +94,7 @@ ul {
 .tip-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  // grid-template-rows: repeat(2, 1fr);
   gap: 10px;
   margin-top: 10px;
 
